--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     implementation(
             [files("lib")]
     )
+    implementation 'junit:junit:4.13.1'
+    implementation 'junit:junit:4.13.1'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation(
             ['org.junit.jupiter:junit-jupiter:5.+'],
             ['org.mockito:mockito-core:4.+'],
