--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,10 @@ dependencies {
             [files("lib")]
     )
     testImplementation(
+            ['org.hamcrest:hamcrest:2.2'],
             ['org.junit.jupiter:junit-jupiter:5.+'],
             ['org.mockito:mockito-core:4.+'],
+            ['org.junit.jupiter:junit-jupiter:5.8.2'],
             [files("lib")]
     )
 }
