--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'junit:junit:4.13.1'
     implementation 'junit:junit:4.13.1'
     implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+
     testImplementation(
             ['org.hamcrest:hamcrest:2.2'],
             ['org.junit.jupiter:junit-jupiter:5.+'],
