Reads config from json file, corrected bug (SquareExam)

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'application'
     id "org.openjfx.javafxplugin" version "0.0.14"
     id 'java'
-    //id 'jacoco'
+
 }
 
 version '0.1'
@@ -44,7 +44,7 @@ dependencies {
     )
 }
 
-task copyLibFolder(type: Copy) {
+tasks.register('copyLibFolder', Copy) {
     description 'Copies the lib folder.'
     from('lib')
     into("$buildDir/classes")
@@ -59,16 +59,4 @@ applicationDistribution.from(['LICENSE', 'README.md']) {
 test {
     useJUnitPlatform()
 }
-/*
-jacoco {
-    toolVersion = "0.8.8"
-    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
-}
 
-jacocoTestReport {
-    reports {
-        xml.required = false
-        csv.required =  false
-        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
-    }
-}*/
