--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/board_config_1.json
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/board_config_1.json
@@ -1,18 +1,17 @@
 {
-  "size": 64,
   "squares": [
     {"type": "SquareStart"},
+    {"type": "SquareDUTTeachings"},
     {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
+    {"type": "SquarePrepaTeachings"},
     {"type": "SquareParty"},
     {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
+    {"type": "SquareUniTeachings"},
     {"type": "SquareBasic"},
 
     {"type": "SquareBasic"},
     {"type": "SquareParty"},
-    {"type": "SquareBasic"},
+    {"type": "SquareClass"},
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
@@ -21,34 +20,34 @@
 
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
-    {"type": "SquareStart"},
+    {"type": "SquareClass"},
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
     {"type": "SquareParty"},
-    {"type": "SquareBasic"},
+    {"type": "SquareClass"},
     {"type": "SquareBasic"},
 
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
+    {"type": "SquareToeicFail"},
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
+    {"type": "SquareInternshipAbroad"},
     {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
+    {"type": "SquareClass"},
 
     {"type": "SquareParty"},
     {"type": "SquareBasic"},
+    {"type": "SquareExam"},
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
-    {"type": "SquareParty"},
+    {"type": "SquareDropout"},
     {"type": "SquareBasic"},
 
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
+    {"type": "SquareClass"},
     {"type": "SquareBasic"},
     {"type": "SquareExam"},
     {"type": "SquareBasic"},
@@ -57,17 +56,17 @@
 
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
+    {"type": "SquareClass"},
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
+    {"type": "SquareDayAfterWEI"},
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
 
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
+    {"type": "SquareClass"},
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
