few message bundle changes

--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle.properties
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle.properties
@@ -14,3 +14,5 @@ squarename.prepa = Cours de Prepa
 squarename.start = Départ
 squarename.toeic = Echec du TOEIC
 squarename.uni = Cours de Licence
+dice.button.text= Lancer
+victory.text = Victoire !
