Added all classes name in MessageBundle, merged Kevin's progress (changed squares that moves the player). 1/3 times : bug infinite game

--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/board_config_1.json
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/board_config_1.json
@@ -5,27 +5,27 @@
     {"type": "SquareBasic"},
     {"type": "SquarePrepaTeachings"},
     {"type": "SquareParty"},
-    {"type": "SquareBasic"},
+    {"type": "SquareClass"},
     {"type": "SquareUniTeachings"},
     {"type": "SquareBasic"},
 
-    {"type": "SquareBasic"},
+    {"type": "SquareDUTTeachings"},
     {"type": "SquareParty"},
     {"type": "SquareClass"},
-    {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
+    {"type": "SquarePrepaTeachings"},
+    {"type": "SquareClass"},
+    {"type": "SquareKangaroo"},
+    {"type": "SquareUniTeachings"},
     {"type": "SquareParty"},
 
-    {"type": "SquareBasic"},
+    {"type": "SquareInformaticsIssues"},
     {"type": "SquareBasic"},
     {"type": "SquareClass"},
-    {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
+    {"type": "SquareIntensiveStudy"},
+    {"type": "SquareKangaroo"},
     {"type": "SquareParty"},
     {"type": "SquareClass"},
-    {"type": "SquareBasic"},
+    {"type": "SquareBDE"},
 
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
@@ -40,35 +40,35 @@
     {"type": "SquareBasic"},
     {"type": "SquareExam"},
     {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
+    {"type": "SquareIntensiveStudy"},
     {"type": "SquareBasic"},
     {"type": "SquareDropout"},
     {"type": "SquareBasic"},
 
-    {"type": "SquareBasic"},
+    {"type": "SquareToeicFail"},
     {"type": "SquareBasic"},
     {"type": "SquareClass"},
     {"type": "SquareBasic"},
     {"type": "SquareExam"},
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
+    {"type": "SquareKangaroo"},
 
-    {"type": "SquareBasic"},
+    {"type": "SquareBDE"},
     {"type": "SquareBasic"},
     {"type": "SquareClass"},
-    {"type": "SquareBasic"},
+    {"type": "SquareInformaticsIssues"},
     {"type": "SquareBasic"},
     {"type": "SquareDayAfterWEI"},
     {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
+    {"type": "SquareToeicFail"},
 
     {"type": "SquareBasic"},
     {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
+    {"type": "SquareInformaticsIssues"},
     {"type": "SquareClass"},
     {"type": "SquareBasic"},
-    {"type": "SquareBasic"},
+    {"type": "SquareDropout"},
     {"type": "SquareBasic"},
     {"type": "SquareEnd"}
   ],
