--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,42 +1,39 @@
-# This file is a template, and might need editing before it works on your project.
-# You can copy and paste this template into a new `.gitlab-ci.yml` file.
-# You should not add this template to an existing `.gitlab-ci.yml` file by using the `include:` keyword.
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Gradle.gitlab-ci.yml
+# Continuous integration for Gradle and JVM applications
+image: openjdk16
 
-# This is the Gradle build system for JVM applications
-# https://gradle.org/
-# https://github.com/gradle/gradle
-
-image: gradle:alpine
+variables:
+  # Using a fresh runtime for each build to isolate each runtime from any previous builds.
+  GRADLE_OPTS: "-Dorg.gradle.daemon=false"
+  # Variable for the runner at ENSICAEN
+  http_proxy: http://193.49.200.22:3128
+  https_proxy: http://193.49.200.22:3128
+  HTTP_PROXY: http://193.49.200.22:3128
+  HTTPS_PROXY: http://193.49.200.22:3128
 
 before_script:
-  - GRADLE_USER_HOME="$(pwd)/.gradle"
-  - export GRADLE_USER_HOME
+  - chmod +x gradlew
+  - mv gradle.properties.ci gradle.properties
+
+stages:
+  - build
+  - test
 
 build:
+  tags :
+    - gitlab-runner-ensicaen
   stage: build
-  script: gradle --build-cache assemble
-  cache:
-    key: "$CI_COMMIT_REF_NAME"
-    policy: push
-    paths:
-      - build
-      - .gradle
+  script:
+    - ./gradlew -Pci --console=plain --build-cache assemble
+  only:
+    - master
 
-test:
+unit_test:
+  tags :
+    - gitlab-runner-ensicaen
   stage: test
-  script: gradle check
-  cache:
-    key: "$CI_COMMIT_REF_NAME"
-    policy: pull
-    paths:
-      - build
-      - .gradle
-
-deploy:
-  stage: deploy
-  script: echo "Define your deployment script!"
-  environment: production
+  coverage: '/Coverage Total: ([0-9]{1,3})%/'
+  only:
+    - master
+  script:
+    - ./gradlew -Pci --console=plain test jacocoTestReport
+    - cat build/jacocoHtml/index.html | grep -o 'Total[^%]*%' | sed 's/<.*>/ /; s/Total/Coverage Total:/'
