Ajout changement de langue fonctionnel (Français/Anglais)

--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle.properties
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle.properties
@@ -2,6 +2,8 @@ login1.message.text=Joueur 1 :
 login2.message.text=Joueur 2 :
 launch.button.text=Lancer le jeu
 error.nickname=Erreur : Manque le pseudo
+language.button.text = Langue
+
 
 squarename.state=Vide
 squarename.BDE=Bloqué au BDE
