--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle.properties
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle.properties
@@ -23,6 +23,7 @@ squarename.start =Admission à l'ENSI
 squarename.toeic=Echec du TOEIC
 squarename.uni=Cours de Licence
 
+dice.result.text= Dés : 
 dice.button.text= Lancer
 victory.text = Victoire !
 restart.button.text= Recommencer
