--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle.properties
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle.properties
@@ -30,4 +30,5 @@ restart.button.text= Recommencer
 player1.text = Joueur 1 : 
 player2.text = Joueur 2 : 
 whosturn.text = C'est au tour de 
+skill.level.text= Points de compétences : 
 
