--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle.properties
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle.properties
@@ -25,7 +25,7 @@ squarename.uni=Cours de Licence
 
 dice.result.text= Dés : 
 dice.button.text= Lancer
-victory.text = Victoire !
+victory.text = Victoire ! Votre salaire est de : 
 restart.button.text= Recommencer
 player1.text = Joueur 1 : 
 player2.text = Joueur 2 : 
