Added combobox for board configuration

--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle.properties
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle.properties
@@ -3,6 +3,7 @@ login2.message.text=Joueur 2 :
 launch.button.text=Lancer le jeu
 error.nickname=Erreur : Manque le pseudo
 language.button.text = Langue
+board.button.text = Plateau
 
 
 squarename.state=Vide
