Added combobox for hardskills and diceTotal for each round

--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle.properties
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/MessageBundle.properties
@@ -4,7 +4,7 @@ launch.button.text=Lancer le jeu
 error.nickname=Erreur : Manque le pseudo
 language.button.text = Langue
 board.button.text = Plateau
-
+hardskill.button.text = Formation d'origine
 
 squarename.state=Vide
 squarename.BDE=Bloqué au BDE
